--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+
 amqp==5.2.0
 asgiref==3.8.1
 billiard==4.2.0
@@ -6,16 +7,15 @@ click==8.1.7
 click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
+clicksend-client==5.0.78
 crispy-bootstrap5==2024.2
-Django==4.2.11
+Django==5.0.4
 django-celery-results==2.5.1
 django-crispy-forms==2.1
-kombu==5.3.7
-prompt-toolkit==3.0.43
 python-dateutil==2.9.0.post0
-six==1.16.0
-sqlparse==0.4.4
-typing_extensions==4.11.0
-tzdata==2024.1
-vine==5.1.0
-wcwidth==0.2.13
+python-dotenv==1.0.1
+requests==2.31.0
+RouterOS-api==0.18.0
+urllib3==2.2.1
+
+
